fixed few bugs like not working of dark theme , searchbox spacing , etc

--- a/style.css
+++ b/style.css
@@ -42,6 +42,7 @@ body {
 
 .search-box button {
   padding: 8px 12px;
+  margin-left:5px;
   font-size: 16px;
   border: none;
   background-color: darkslategray;
