--- a/weather.css
+++ b/weather.css
@@ -6,16 +6,15 @@
     background-color: rgb(147, 33, 33,0);
     cursor: pointer;
 }
-body::before {
-  background-color: aliceblue;
+body {
+  background-color: white;
   content: "";
-  position: fixed;
+  /*position: fixed;*/
   top: 0; left: 0;
   width: 100%; height: 100%;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  opacity: 0.8; /* control fade here */
   z-index: -1;
 }
 
@@ -58,7 +57,7 @@ body::before {
 }
 body.dark{
     background-color: black;
-    color: aliceblue;
+    color: white;
 }
 body.dark #theme-toggle{
   color: white;
